@@ -34,6 +34,19 @@ endif (POLICY CMP0005)
 
 SET (CMAKE_BUILD_TYPE debug)
 
+## Version
+
+file (READ ../VERSION _OPENVASLIBBASE_VERSION)
+STRING (REPLACE "
+" "" OPENVASLIBBASE_VERSION ${_OPENVASLIBBASE_VERSION})
+
+string (REGEX REPLACE "\\\n" "." _OPENVASLIBBASE_VERSION_TMP ${_OPENVASLIBBASE_VERSION})
+string (REGEX REPLACE "\\." ";" OPENVASLIBBASE_VERSION ${_OPENVASLIBBASE_VERSION_TMP})
+
+list(GET OPENVASLIBBASE_VERSION 0 OPENVASLIBBASE_MAJOR)
+list(GET OPENVASLIBBASE_VERSION 1 OPENVASLIBBASE_MINOR)
+list(GET OPENVASLIBBASE_VERSION 2 OPENVASLIBBASE_PATCH)
+
 ## CPack configuration
 
 SET (CPACK_CMAKE_GENERATOR "Unix Makefiles")
@@ -47,9 +60,9 @@ SET (CPACK_SOURCE_GENERATOR "TGZ")
 SET (CPACK_SOURCE_TOPLEVEL_TAG "")
 SET (CPACK_SYSTEM_NAME "")
 SET (CPACK_TOPLEVEL_TAG "")
-SET (CPACK_PACKAGE_VERSION_MAJOR "3")
-SET (CPACK_PACKAGE_VERSION_MINOR "0")
-SET (CPACK_PACKAGE_VERSION_PATCH "0")
+SET (CPACK_PACKAGE_VERSION_MAJOR ${OPENVASLIBBASE_MAJOR})
+SET (CPACK_PACKAGE_VERSION_MINOR ${OPENVASLIBBASE_MINOR})
+SET (CPACK_PACKAGE_VERSION_PATCH ${OPENVASLIBBASE_PATCH})
 SET (CPACK_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
 SET (CPACK_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
 SET (CPACK_SOURCE_PACKAGE_FILE_NAME "${PROJECT_NAME}-${CPACK_PACKAGE_VERSION}")
@@ -114,12 +127,6 @@ set (OPENVAS_SERVER_KEY         "${OPENVAS_STATE_DIR}/private/CA/serverkey.pem")
 set (OPENVAS_CA_CERTIFICATE     "${OPENVAS_STATE_DIR}/CA/cacert.pem")
 
 message ("-- Install prefix: ${CMAKE_INSTALL_PREFIX}")
-
-## Version
-
-file (READ ../VERSION _OPENVASLIBBASE_VERSION)
-STRING (REPLACE "
-" "" OPENVASLIBBASE_VERSION ${_OPENVASLIBBASE_VERSION})
 
 ## Config
 
